--- a/app/src/main/res/layout/fragment_columns.xml
+++ b/app/src/main/res/layout/fragment_columns.xml
@@ -1,62 +1,325 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:overScrollMode="never"
+    android:scrollbars="none"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <TextView
-        android:id="@+id/info_test_tv"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_margin="20dp"
-        android:background="#F9E1FD"
-        android:text="TEST"
-        android:textAlignment="center"
-        android:textSize="80sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="match_parent"
+        android:layout_marginHorizontal="20dp">
 
-    <Button
-        android:id="@+id/info_area1_btn"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:backgroundTint="#C295CA"
-        android:text="분야1"
-        app:layout_constraintBottom_toTopOf="@id/info_area3_btn"
-        app:layout_constraintEnd_toStartOf="@id/info_area2_btn"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/info_test_tv" />
+        <TextView
+            android:id="@+id/columns_title_tv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="카테고리"
+            android:textSize="40sp"
+            android:textColor="@color/black"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
 
-        <Button
-            android:id="@+id/info_area2_btn"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:backgroundTint="#C295CA"
-            android:text="분야2"
-            app:layout_constraintTop_toBottomOf="@id/info_test_tv"
-            app:layout_constraintBottom_toTopOf="@id/info_area4_btn"
-            app:layout_constraintStart_toEndOf="@id/info_area1_btn"
-            app:layout_constraintEnd_toEndOf="parent"/>
-        <Button
-            android:id="@+id/info_area3_btn"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:backgroundTint="#C295CA"
-            android:text="분야3"
-            app:layout_constraintTop_toBottomOf="@id/info_area1_btn"
-            app:layout_constraintBottom_toBottomOf="parent"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/columns_test_clayout"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:padding="10dp"
+            app:layout_constraintTop_toBottomOf="@id/columns_title_tv">
+
+            <TextView
+                android:id="@+id/columns_test_main_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:text="생리대 TEST"
+                android:textSize="20sp"
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
+
+            <TextView
+                android:id="@+id/columns_test_sub_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:text="나에게 가장 잘 맞는 생리대를 찾아보자!"
+                android:textSize="15sp"
+                app:layout_constraintTop_toBottomOf="@id/columns_test_main_tv"
+                app:layout_constraintStart_toStartOf="@id/columns_test_main_tv"/>
+
+            <ImageView
+                android:id="@+id/columns_test_iv"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:src="@drawable/ic_launcher_foreground"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/columms_category1_clayout"
+            android:layout_width="180dp"
+            android:layout_height="180dp"
+            android:layout_margin="10dp"
+            android:background="#C295CA"
+            app:layout_constraintTop_toBottomOf="@id/columns_test_clayout"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/info_area4_btn"/>
-        <Button
-            android:id="@+id/info_area4_btn"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:backgroundTint="#C295CA"
-            android:text="분야4"
-            app:layout_constraintTop_toBottomOf="@id/info_area2_btn"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@id/info_area3_btn"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toStartOf="@id/columms_category2_clayout">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <TextView
+                android:id="@+id/columms_category1_main_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="15dp"
+                android:text="내 몸의 변화"
+                android:textSize="18sp"
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
+
+            <TextView
+                android:id="@+id/columms_category1_sub_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="월경이 터졌다!"
+                android:textSize="14sp"
+                android:textColor="@color/white"
+                app:layout_constraintStart_toStartOf="@id/columms_category1_main_tv"
+                app:layout_constraintTop_toBottomOf="@id/columms_category1_main_tv"/>
+
+            <ImageView
+                android:id="@+id/columns_category1_iv"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:src="@drawable/ic_launcher_foreground"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/columms_category2_clayout"
+            android:layout_width="180dp"
+            android:layout_height="180dp"
+            android:layout_margin="10dp"
+            android:background="#C295CA"
+            app:layout_constraintTop_toBottomOf="@id/columns_test_clayout"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/columms_category1_clayout">
+
+            <TextView
+                android:id="@+id/columms_category2_main_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="15dp"
+                android:text="콤플렉스에 대하여"
+                android:textSize="18sp"
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
+
+            <TextView
+                android:id="@+id/columms_category2_sub_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="나의 몸과 행복해지기"
+                android:textSize="14sp"
+                android:textColor="@color/white"
+                app:layout_constraintStart_toStartOf="@id/columms_category2_main_tv"
+                app:layout_constraintTop_toBottomOf="@id/columms_category2_main_tv"/>
+
+            <ImageView
+                android:id="@+id/columns_category2_iv"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:src="@drawable/ic_launcher_foreground"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/columms_category3_clayout"
+            android:layout_width="180dp"
+            android:layout_height="180dp"
+            android:layout_margin="10dp"
+            android:background="#C295CA"
+            app:layout_constraintTop_toBottomOf="@id/columms_category1_clayout"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/columms_category4_clayout">
+
+            <TextView
+                android:id="@+id/columms_category3_main_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="15dp"
+                android:text="감정과 행동"
+                android:textSize="18sp"
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
+
+            <TextView
+                android:id="@+id/columms_category3_sub_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="냐는 누구일까?"
+                android:textSize="14sp"
+                android:textColor="@color/white"
+                app:layout_constraintStart_toStartOf="@id/columms_category3_main_tv"
+                app:layout_constraintTop_toBottomOf="@id/columms_category3_main_tv"/>
+
+            <ImageView
+                android:id="@+id/columns_category3_iv"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:src="@drawable/ic_launcher_foreground"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/columms_category4_clayout"
+            android:layout_width="180dp"
+            android:layout_height="180dp"
+            android:layout_margin="10dp"
+            android:background="#C295CA"
+            app:layout_constraintTop_toBottomOf="@id/columms_category2_clayout"
+            app:layout_constraintStart_toEndOf="@id/columms_category3_clayout"
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <TextView
+                android:id="@+id/columms_category4_main_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="15dp"
+                android:text="건강한 성생활"
+                android:textSize="18sp"
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
+
+            <TextView
+                android:id="@+id/columms_category4_sub_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="안전하게 섹스하기"
+                android:textSize="14sp"
+                android:textColor="@color/white"
+                app:layout_constraintStart_toStartOf="@id/columms_category4_main_tv"
+                app:layout_constraintTop_toBottomOf="@id/columms_category4_main_tv"/>
+
+            <ImageView
+                android:id="@+id/columns_category4_iv"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:src="@drawable/ic_launcher_foreground"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/columms_category5_clayout"
+            android:layout_width="180dp"
+            android:layout_height="180dp"
+            android:layout_margin="10dp"
+            android:background="#C295CA"
+            app:layout_constraintTop_toBottomOf="@id/columms_category3_clayout"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/columms_category6_clayout">
+
+            <TextView
+                android:id="@+id/columms_category5_main_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="15dp"
+                android:text="건강관리"
+                android:textSize="18sp"
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
+
+            <TextView
+                android:id="@+id/columms_category5_sub_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="나를 위해 챙겨야 할 것"
+                android:textSize="14sp"
+                android:textColor="@color/white"
+                app:layout_constraintStart_toStartOf="@id/columms_category5_main_tv"
+                app:layout_constraintTop_toBottomOf="@id/columms_category5_main_tv"/>
+
+            <ImageView
+                android:id="@+id/columns_category5_iv"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:src="@drawable/ic_launcher_foreground"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/columms_category6_clayout"
+            android:layout_width="180dp"
+            android:layout_height="180dp"
+            android:layout_margin="10dp"
+            android:background="#C295CA"
+            app:layout_constraintTop_toBottomOf="@id/columms_category4_clayout"
+            app:layout_constraintStart_toEndOf="@id/columms_category5_clayout"
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <TextView
+                android:id="@+id/columms_category6_main_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="15dp"
+                android:text="그게 무슨 뜻이야?"
+                android:textSize="18sp"
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
+
+            <TextView
+                android:id="@+id/columms_category6_sub_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="그 단어의 의미"
+                android:textSize="14sp"
+                android:textColor="@color/white"
+                app:layout_constraintStart_toStartOf="@id/columms_category6_main_tv"
+                app:layout_constraintTop_toBottomOf="@id/columms_category6_main_tv"/>
+
+            <ImageView
+                android:id="@+id/columns_category6_iv"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:src="@drawable/ic_launcher_foreground"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</ScrollView>
