--- a/app/src/main/res/layout/activity_chatting_detail.xml
+++ b/app/src/main/res/layout/activity_chatting_detail.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/chatting_detail_profile_clayout"
@@ -63,6 +64,14 @@
         app:layout_constraintTop_toBottomOf="@id/chatting_detail_profile_clayout"
         app:layout_constraintBottom_toTopOf="@id/chatting_detail_send_clayout"
         app:layout_constraintStart_toStartOf="parent">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/chatting_detail_content_rv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            android:orientation="vertical"
+            tools:listitem="@layout/item_message"/>
 
     </ScrollView>
 
