--- a/app/src/main/res/layout/fragment_category1.xml
+++ b/app/src/main/res/layout/fragment_category1.xml
@@ -31,7 +31,7 @@
             android:layout_marginStart="20dp"
             android:layout_marginTop="30dp"
             android:backgroundTint="#aaaaaa"
-            app:cardElevation="dp"
+            app:cardElevation="0dp"
             app:cardCornerRadius="20dp"
             app:cardUseCompatPadding="true"
             app:layout_constraintStart_toStartOf="parent"
