--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/white">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView3"
@@ -23,6 +24,20 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="프로필 이미지 변경"
+                android:textSize="45px"
+                android:textColor="#444444"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.12"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.09" />
+
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/profile_image_iv"
                 android:layout_width="180dp"
@@ -33,7 +48,7 @@
                 app:civ_border_width="10dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.134"
+                app:layout_constraintHorizontal_bias="0.08"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.504"
@@ -41,27 +56,33 @@
 
             <Button
                 android:id="@+id/profile_nomal_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="180dp"
+                android:layout_height="40dp"
                 android:text="기본 이미지로 변경"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.873"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.739" />
-
-            <Button
-                android:id="@+id/profile_newImage_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="이미지 선택"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:background="@drawable/round_realgrey"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.824"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.324" />
+                app:layout_constraintVertical_bias="0.635" />
+
+            <Button
+                android:id="@+id/profile_newImage_btn"
+                android:layout_width="180dp"
+                android:layout_height="40dp"
+                android:text="이미지 선택"
+                android:textStyle="bold"
+                android:textColor="@color/white"
+                android:background="@drawable/round_realgrey"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.824"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.394" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
@@ -70,6 +91,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="프로필 설정"
+        android:textSize="60px"
+        android:textColor="@color/black"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.102"
@@ -99,23 +123,29 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="닉네임 변경"
+                android:textSize="45px"
+                android:textColor="#444444"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.046"
+                app:layout_constraintHorizontal_bias="0.12"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.149" />
+                app:layout_constraintVertical_bias="0.05" />
 
             <EditText
                 android:id="@+id/profile_name_et"
                 android:layout_width="320dp"
                 android:layout_height="43dp"
                 android:ems="10"
-                android:hint="10자 이내로 적어주세요."
+                android:hint="   10자 이내로 적어주세요."
+                android:textSize="40px"
+                android:textColorHint="#DADADA"
                 android:inputType="textPersonName"
+                android:background="@drawable/round_realgrey_stroke"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.172"
+                app:layout_constraintHorizontal_bias="0.44"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.506" />
@@ -124,21 +154,28 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="특수문자 사용x"
+                android:textSize="35px"
+                android:textStyle="bold"
+                android:textColor="@color/red1"
                 app:layout_constraintBottom_toTopOf="@+id/profile_name_et"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.714"
+                app:layout_constraintHorizontal_bias="0.824"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="1.0" />
+                app:layout_constraintVertical_bias="0.73" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
 
     <Button
         android:id="@+id/profile_change_btn"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:text="변경하기"
+        android:textSize="40px"
+        android:textStyle="bold"
+        android:textColor="@color/white"
+        android:background="@drawable/round_green"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
